--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
+  <div class="card container">
+    <div class="nft">
+      <img src="/images/image-equilibrium.jpg" alt="motionless red and blue transparent cube  with reflection under">
+      <div class="overlay">
+        <div class="eye-icon"><img src="/images/icon-view.svg"></div>
+      </div>
+    </div>
+      <h2>Equilibrium #3429</h2>
+      <p class="soft-blue">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="card-border-bottom row">
+        <p><img class="icon-eth" src="images/icon-ethereum.svg">0.041 ETH</p>
+        <p class="soft-blue"><img class="icon-clock" src="images/icon-clock.svg">3 days left</p>
+    </div>
+    <div class="credit row">
+      <img class="avatar" src="images/image-avatar.png">
+      <p class="soft-blue align">Creation of <span class="white">Jules Wyvern</span></p>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
