--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="card container">
     <div class="nft">
-      <img src="/images/image-equilibrium.jpg" alt="motionless red and blue transparent cube  with reflection under">
+      <img src="/images/image-equilibrium.JPG" alt="motionless red and blue transparent cube  with reflection under">
       <div class="overlay">
         <div class="eye-icon"><img src="/images/icon-view.svg"></div>
       </div>
