--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <div class="card container">
     <div class="nft">
-      <img src="/images/image-equilibrium.JPG" alt="motionless red and blue transparent cube  with reflection under">
+      <img src="images/image-equilibrium.jpg" alt="motionless red and blue transparent cube  with reflection under">
       <div class="overlay">
-        <div class="eye-icon"><img src="/images/icon-view.svg"></div>
+        <div class="eye-icon"><img src="images/icon-view.svg"></div>
       </div>
     </div>
       <h2>Equilibrium #3429</h2>
