--- a/index.html
+++ b/index.html
@@ -14,27 +14,29 @@
 
 </head>
 <body>
-  <div class="card container">
-    <div class="nft">
-      <img src="images/image-equilibrium.jpg" alt="motionless red and blue transparent cube  with reflection under">
-      <div class="overlay">
-        <div class="eye-icon"><img src="images/icon-view.svg"></div>
+  <main>
+    <div class="card container">
+      <div class="nft">
+        <img src="images/image-equilibrium.jpg" alt="motionless red and blue transparent cube  with reflection under">
+        <div class="overlay">
+          <div class="eye-icon"><img src="images/icon-view.svg"></div>
+        </div>
+      </div>
+        <h2>Equilibrium #3429</h2>
+        <p class="soft-blue">Our Equilibrium collection promotes balance and calm.</p>
+      <div class="card-border-bottom row">
+          <p><img class="icon-eth" src="images/icon-ethereum.svg">0.041 ETH</p>
+          <p class="soft-blue"><img class="icon-clock" src="images/icon-clock.svg">3 days left</p>
+      </div>
+      <div class="credit row">
+        <img class="avatar" src="images/image-avatar.png">
+        <p class="soft-blue align">Creation of <span class="white">Jules Wyvern</span></p>
       </div>
     </div>
-      <h2>Equilibrium #3429</h2>
-      <p class="soft-blue">Our Equilibrium collection promotes balance and calm.</p>
-    <div class="card-border-bottom row">
-        <p><img class="icon-eth" src="images/icon-ethereum.svg">0.041 ETH</p>
-        <p class="soft-blue"><img class="icon-clock" src="images/icon-clock.svg">3 days left</p>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
     </div>
-    <div class="credit row">
-      <img class="avatar" src="images/image-avatar.png">
-      <p class="soft-blue align">Creation of <span class="white">Jules Wyvern</span></p>
-    </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </main>
 </body>
 </html>
