--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       <div class="nft">
         <img src="images/image-equilibrium.jpg" alt="motionless red and blue transparent cube  with reflection under">
         <div class="overlay">
-          <div class="eye-icon"><img src="images/icon-view.svg"></div>
+          <div class="eye-icon"><img src="images/icon-view.svg" alt="eye icon"></div>
         </div>
       </div>
         <h2>Equilibrium #3429</h2>
         <p class="soft-blue">Our Equilibrium collection promotes balance and calm.</p>
       <div class="card-border-bottom row">
-          <p><img class="icon-eth" src="images/icon-ethereum.svg">0.041 ETH</p>
-          <p class="soft-blue"><img class="icon-clock" src="images/icon-clock.svg">3 days left</p>
+          <p><img class="icon-eth" src="images/icon-ethereum.svg" alt="Ethereum icon">0.041 ETH</p>
+          <p class="soft-blue"><img class="icon-clock" src="images/icon-clock.svg" alt="Clock Icon">3 days left</p>
       </div>
       <div class="credit row">
-        <img class="avatar" src="images/image-avatar.png">
+        <img class="avatar" src="images/image-avatar.png" alt="Avatar Picture">
         <p class="soft-blue align">Creation of <span class="white">Jules Wyvern</span></p>
       </div>
     </div>
