--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="eye-icon"><img src="images/icon-view.svg" alt="eye icon"></div>
         </div>
       </div>
-        <h1 alt="NFT's name and number">Equilibrium #3429</h1>
+        <h1>Equilibrium #3429</h1>
         <p class="soft-blue">Our Equilibrium collection promotes balance and calm.</p>
       <div class="card-border-bottom row">
           <p><img class="icon-eth" src="images/icon-ethereum.svg" alt="Ethereum icon">0.041 ETH</p>
